# SmartButton

./: CMakeLists.txt  README.md  sdkconfig
common/: CMakeLists.txt  app_OTA.c  app_OTA.h  app_config.c  app_flash.c  app_flash.h  app_tcp_client.c  app_tcp_client.h  command_control.h  control_device.c  control_device.h  frame_crc.c  frame_crc.h
common/app_config/: CMakeLists.txt  app_config.c
common/frame_crc/: CMakeLists.txt  frame_crc.c  frame_crc.h
common/gpio_output/: CMakeLists.txt  output_iot.c
main/: CMakeLists.txt  app_config.c  app_config.h  main.c
